# greycat-sdk-rust

./: .gitignore  .gitlab-ci.yml  Cargo.toml  build.sh  project.gcl  publish.sh
fixtures/: read.gcl  record.gcl  write.gcl
greycat/: Cargo.toml
greycat-cli/: Cargo.toml
greycat-cli/fixtures/: read.gcl
greycat-cli/src/: main.rs
greycat-macro/: Cargo.toml
greycat-macro/src/: lib.rs
greycat-sdk/: .gitignore  Cargo.toml  README.md
greycat-sdk/src/: abi.rs  deserialize.rs  gc_enum.rs  gc_object.rs  lib.rs  library.rs  prelude.rs  primitive.rs  serde_utils.rs  serialize.rs  std.rs  value.rs  varint.rs
greycat-sdk/src/std_n/core/: float.rs  geo.rs  mod.rs  nodes.rs  string.rs  time.rs
greycat-sys/: Cargo.toml  build.rs
greycat-sys/src/: lib.rs
greycat/src/: alloc.rs  buffer.rs  gobject.rs  gstr.rs  gstring.rs  lib.rs  library.rs  machine.rs  program.rs  value.rs
